--- a/api-reference.html
+++ b/api-reference.html
@@ -8,10 +8,9 @@
     <meta name="project" content="Crux vdev">
     <title>API Reference — Crux vdev</title>
     <link rel="stylesheet" href="dist/html-78f1ba308158a498a5a4.css" />
-    <script src="dist/sidebar_items-32c14257a8.js"></script>
+    <script src="dist/sidebar_items-54fe6ae213.js"></script>
       <script src="docs_config.js"></script>
     <script async src="dist/html-78f1ba308158a498a5a4.js"></script>
-    
   </head>
   <body data-type="extras">
     <script>try { if(localStorage.getItem('night-mode')) document.body.className += ' night-mode'; } catch (e) { }</script>
@@ -65,7 +64,6 @@ Crux      </a>
 <section class="content">
   <div class="content-outer">
     <div id="content" class="content-inner">
-
 
 <h1>
   <small class="app-vsn">Crux vdev</small>
@@ -251,7 +249,7 @@ Crux      </a>
   <div class="summary-signature">
     <a href="Crux.Structs.html">Crux.Structs</a>
   </div>
-    <div class="summary-synopsis"><p>  Provides a unified function to create one or a list of structs, invoking their <code class="inline">create/1</code> function if available.</p></div>
+    <div class="summary-synopsis"><p>  Provides a unified function to create one or a list of structs, invoking their <a href="#c:create/1"><code class="inline">create/1</code></a> function if available.</p></div>
 </div>
 <div class="summary-row">
   <div class="summary-signature">
@@ -351,6 +349,18 @@ Crux      </a>
 </div>
 <div class="summary-row">
   <div class="summary-signature">
+    <a href="Crux.Structs.Snowflake.html">Crux.Structs.Snowflake</a>
+  </div>
+    <div class="summary-synopsis"><p>  Custom non discord api struct to help with working with Discord&#39;s snowflakes.</p></div>
+</div>
+<div class="summary-row">
+  <div class="summary-signature">
+    <a href="Crux.Structs.Snowflake.Parts.html">Crux.Structs.Snowflake.Parts</a>
+  </div>
+    <div class="summary-synopsis"><p>  Custom non discord api struct representing a deconstructed Discord snowflake.</p></div>
+</div>
+<div class="summary-row">
+  <div class="summary-signature">
     <a href="Crux.Structs.User.html">Crux.Structs.User</a>
   </div>
     <div class="summary-synopsis"><p>  Represents a Discord <a href="https://discordapp.com/developers/docs/resources/user#user-object-user-structure">User Object</a></p></div>
@@ -430,7 +440,5 @@ Crux      </a>
   </div>
 </section>
 </div>
-  
   </body>
 </html>
-
