--- a/Crux.Extensions.html
+++ b/Crux.Extensions.html
@@ -8,14 +8,13 @@
     <meta name="project" content="Crux vdev">
     <title>Crux.Extensions — Crux vdev</title>
     <link rel="stylesheet" href="dist/html-78f1ba308158a498a5a4.css" />
-    <script src="dist/sidebar_items-32c14257a8.js"></script>
+    <script src="dist/sidebar_items-54fe6ae213.js"></script>
       <script src="docs_config.js"></script>
     <script async src="dist/html-78f1ba308158a498a5a4.js"></script>
-    
   </head>
   <body data-type="modules">
     <script>try { if(localStorage.getItem('night-mode')) document.body.className += ' night-mode'; } catch (e) { }</script>
-    <div class="main">
+<div class="main">
 
 <button class="sidebar-button sidebar-toggle">
   <span class="icon-menu" title="Collapse/expand sidebar"></span>
@@ -66,11 +65,9 @@ Crux      </a>
   <div class="content-outer">
     <div id="content" class="content-inner">
 
-
       <h1>
         <small class="app-vsn">Crux vdev</small>
-Crux.Extensions        
-          <a href="https://github.com/SpaceEEC/crux_extensions/blob/master/lib/extensions/extensions.ex#L1" title="View Source" class="view-source" rel="help">
+Crux.Extensions          <a href="https://github.com/SpaceEEC/crux_extensions/blob/master/lib/extensions/extensions.ex#L1" title="View Source" class="view-source" rel="help">
             <span class="icon-code" aria-hidden="true"></span>
             <span class="sr-only">View Source</span>
           </a>
@@ -87,7 +84,7 @@ Crux.Extensions
         </section>
 
 
-          <footer class="footer">
+      <footer class="footer">
         <p>
           <span class="line">
             Built using
@@ -111,7 +108,5 @@ Crux.Extensions
   </div>
 </section>
 </div>
-  
   </body>
 </html>
-
