--- a/Crux.Gateway.Connection.html
+++ b/Crux.Gateway.Connection.html
@@ -8,14 +8,13 @@
     <meta name="project" content="Crux vdev">
     <title>Crux.Gateway.Connection — Crux vdev</title>
     <link rel="stylesheet" href="dist/html-78f1ba308158a498a5a4.css" />
-    <script src="dist/sidebar_items-32c14257a8.js"></script>
+    <script src="dist/sidebar_items-54fe6ae213.js"></script>
       <script src="docs_config.js"></script>
     <script async src="dist/html-78f1ba308158a498a5a4.js"></script>
-    
   </head>
   <body data-type="modules">
     <script>try { if(localStorage.getItem('night-mode')) document.body.className += ' night-mode'; } catch (e) { }</script>
-    <div class="main">
+<div class="main">
 
 <button class="sidebar-button sidebar-toggle">
   <span class="icon-menu" title="Collapse/expand sidebar"></span>
@@ -66,11 +65,9 @@ Crux      </a>
   <div class="content-outer">
     <div id="content" class="content-inner">
 
-
       <h1>
         <small class="app-vsn">Crux vdev</small>
-Crux.Gateway.Connection        
-          <a href="https://github.com/SpaceEEC/crux_gateway/blob/master/lib/gateway/connection/connection.ex#L1" title="View Source" class="view-source" rel="help">
+Crux.Gateway.Connection          <a href="https://github.com/SpaceEEC/crux_gateway/blob/master/lib/gateway/connection/connection.ex#L1" title="View Source" class="view-source" rel="help">
             <span class="icon-code" aria-hidden="true"></span>
             <span class="sr-only">View Source</span>
           </a>
@@ -111,17 +108,16 @@ Crux.Gateway.Connection
 Functions          </h1>
           <div class="functions-list">
 <section class="detail" id="send_command/3">
-    <div class="detail-header">
+  <div class="detail-header">
     <a href="#send_command/3" class="detail-link" title="Link to this function">
       <span class="icon-link" aria-hidden="true"></span>
       <span class="sr-only">Link to this function</span>
     </a>
     <h1 class="signature">send_command(gateway, shard_id, command)</span>
-      <a href="https://github.com/SpaceEEC/crux_gateway/blob/master/lib/gateway/connection/connection.ex#L61" class="view-source" rel="help" title="View Source">
+      <a href="https://github.com/SpaceEEC/crux_gateway/blob/master/lib/gateway/connection/connection.ex#L63" class="view-source" rel="help" title="View Source">
        <span class="icon-code" aria-hidden="true"></span>
        <span class="sr-only">View Source</span>
      </a>
-        
       <div class="specs">
           <pre>send_command(
   gateway :: <a href="Crux.Gateway.html#t:gateway/0">Crux.Gateway.gateway</a>(),
@@ -138,7 +134,7 @@ Functions          </h1>
 </section>
           </div>
         </section>
-          <footer class="footer">
+      <footer class="footer">
         <p>
           <span class="line">
             Built using
@@ -162,7 +158,5 @@ Functions          </h1>
   </div>
 </section>
 </div>
-  
   </body>
 </html>
-
