--- a/Mix.Tasks.Bangify.html
+++ b/Mix.Tasks.Bangify.html
@@ -8,14 +8,13 @@
     <meta name="project" content="Crux vdev">
     <title>mix bangify — Crux vdev</title>
     <link rel="stylesheet" href="dist/html-78f1ba308158a498a5a4.css" />
-    <script src="dist/sidebar_items-32c14257a8.js"></script>
+    <script src="dist/sidebar_items-54fe6ae213.js"></script>
       <script src="docs_config.js"></script>
     <script async src="dist/html-78f1ba308158a498a5a4.js"></script>
-    
   </head>
   <body data-type="tasks">
     <script>try { if(localStorage.getItem('night-mode')) document.body.className += ' night-mode'; } catch (e) { }</script>
-    <div class="main">
+<div class="main">
 
 <button class="sidebar-button sidebar-toggle">
   <span class="icon-menu" title="Collapse/expand sidebar"></span>
@@ -66,11 +65,9 @@ Crux      </a>
   <div class="content-outer">
     <div id="content" class="content-inner">
 
-
       <h1>
         <small class="app-vsn">Crux vdev</small>
-mix bangify        
-          <a href="https://github.com/SpaceEEC/crux_rest/blob/master/lib/mix/tasks/bangify.ex#L1" title="View Source" class="view-source" rel="help">
+mix bangify          <a href="https://github.com/SpaceEEC/crux_rest/blob/master/lib/mix/tasks/bangify.ex#L1" title="View Source" class="view-source" rel="help">
             <span class="icon-code" aria-hidden="true"></span>
             <span class="sr-only">View Source</span>
           </a>
@@ -118,7 +115,7 @@ mix bangify
 Functions          </h1>
           <div class="functions-list">
 <section class="detail" id="callbacks/0">
-    <div class="detail-header">
+  <div class="detail-header">
     <a href="#callbacks/0" class="detail-link" title="Link to this function">
       <span class="icon-link" aria-hidden="true"></span>
       <span class="sr-only">Link to this function</span>
@@ -128,12 +125,12 @@ Functions          </h1>
        <span class="icon-code" aria-hidden="true"></span>
        <span class="sr-only">View Source</span>
      </a>
-          </div>
+  </div>
   <section class="docstring">
   </section>
 </section>
 <section class="detail" id="functions/0">
-    <div class="detail-header">
+  <div class="detail-header">
     <a href="#functions/0" class="detail-link" title="Link to this function">
       <span class="icon-link" aria-hidden="true"></span>
       <span class="sr-only">Link to this function</span>
@@ -143,12 +140,12 @@ Functions          </h1>
        <span class="icon-code" aria-hidden="true"></span>
        <span class="sr-only">View Source</span>
      </a>
-          </div>
+  </div>
   <section class="docstring">
   </section>
 </section>
 <section class="detail" id="run/1">
-    <div class="detail-header">
+  <div class="detail-header">
     <a href="#run/1" class="detail-link" title="Link to this function">
       <span class="icon-link" aria-hidden="true"></span>
       <span class="sr-only">Link to this function</span>
@@ -158,7 +155,7 @@ Functions          </h1>
        <span class="icon-code" aria-hidden="true"></span>
        <span class="sr-only">View Source</span>
      </a>
-          </div>
+  </div>
   <section class="docstring">
 <p>A task needs to implement <code class="inline">run</code> which receives<br>a list of command line args.</p>
 <p>Callback implementation for <a href="https://hexdocs.pm/mix/Mix.Task.html#c:run/1"><code class="inline">Mix.Task.run/1</code></a>.</p>
@@ -166,7 +163,7 @@ Functions          </h1>
 </section>
           </div>
         </section>
-          <footer class="footer">
+      <footer class="footer">
         <p>
           <span class="line">
             Built using
@@ -190,7 +187,5 @@ Functions          </h1>
   </div>
 </section>
 </div>
-  
   </body>
 </html>
-
