--- a/Crux.Structs.VoiceState.html
+++ b/Crux.Structs.VoiceState.html
@@ -124,7 +124,7 @@ Types          </h1>
       <span class="sr-only">Link to this type</span>
     </a>
     <h1 class="signature">t()</span>
-      <a href="https://github.com/SpaceEEC/crux_structs/blob/master/lib/structs/voice_state.ex#L28" class="view-source" rel="help" title="View Source">
+      <a href="https://github.com/SpaceEEC/crux_structs/blob/master/lib/structs/voice_state.ex#L30" class="view-source" rel="help" title="View Source">
        <span class="icon-code" aria-hidden="true"></span>
        <span class="sr-only">View Source</span>
      </a>
@@ -137,6 +137,7 @@ Types          </h1>
   mute: <a href="https://hexdocs.pm/elixir/typespecs.html#built-in-types">boolean</a>(),
   self_deaf: <a href="https://hexdocs.pm/elixir/typespecs.html#built-in-types">boolean</a>(),
   self_mute: <a href="https://hexdocs.pm/elixir/typespecs.html#built-in-types">boolean</a>(),
+  self_stream: <a href="https://hexdocs.pm/elixir/typespecs.html#built-in-types">boolean</a>(),
   session_id: <a href="https://hexdocs.pm/elixir/String.html#t:t/0">String.t</a>(),
   suppress: <a href="https://hexdocs.pm/elixir/typespecs.html#built-in-types">boolean</a>(),
   user_id: <a href="Crux.Structs.Snowflake.html#t:t/0">Crux.Structs.Snowflake.t</a>()
@@ -163,7 +164,7 @@ Functions          </h1>
       <span class="sr-only">Link to this function</span>
     </a>
     <h1 class="signature">create(data)</span>
-      <a href="https://github.com/SpaceEEC/crux_structs/blob/master/lib/structs/voice_state.ex#L48" class="view-source" rel="help" title="View Source">
+      <a href="https://github.com/SpaceEEC/crux_structs/blob/master/lib/structs/voice_state.ex#L51" class="view-source" rel="help" title="View Source">
        <span class="icon-code" aria-hidden="true"></span>
        <span class="sr-only">View Source</span>
      </a>
